--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cadastro - Proxxima Telecom</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
+  <header class="identidade">
+    <h1>Proxxima Telecom</h1>
+    <h2>Gilson Tavares</h2>
+    <p>Consultor e Vendedor Externo</p>
+    <p class="contrate">📞 Contrate comigo!</p>
+  </header>  
 <body>
   <div class="container">
     <header>
