--- a/index.html
+++ b/index.html
@@ -1,59 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Formulário Proxxima</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
   <header class="identidade">
     <h1>Proxxima Telecom</h1>
     <h2>Gilson Tavares</h2>
     <p>Consultor e Vendedor Externo</p>
     <p class="contrate">📞 Contrate comigo!</p>
-  </header>  
-<body>
-  <div class="container">
-    <header>
-      <h1>Proxxima Telecom</h1>
-      <p>Gilson Tavares – Consultor e Vendedor Externo</p>
-    </header>
+  </header>
 
-    <form action="https://formsubmit.co/gilson.tavares1510@gmail.com" method="POST">
-      <!-- Oculta o captcha e redireciona após envio -->
-      <input type="hidden" name="_captcha" value="false" />
-      <input type="hidden" name="_next" value="https://formulario-proxxima.vercel.app/obrigado.html" />
+  <form action="https://formsubmit.co/gilson.tavares1510@gmail.com" method="POST">
+    <label>Nome completo:
+      <input type="text" name="nome" required />
+    </label>
 
-      <label for="nome">Nome completo:</label>
-      <input type="text" id="nome" name="Nome" required placeholder="Seu nome completo" />
+    <label>CPF (para consulta de crédito):
+      <input type="text" name="cpf" required placeholder="Digite seu CPF" />
+    </label>
 
-      <label for="cpf">CPF:</label>
-      <input type="text" id="cpf" name="CPF" required placeholder="Para consulta de crédito" />
+    <label>CEP:
+      <input type="text" name="cep" required />
+    </label>
 
-      <label for="endereco">Endereço completo:</label>
-      <input type="text" id="endereco" name="Endereço" required placeholder="Rua, número, bairro, cidade" />
+    <label>Endereço completo:
+      <input type="text" name="endereco" required />
+    </label>
 
-      <label for="cep">CEP:</label>
-      <input type="text" id="cep" name="CEP" required placeholder="00000-000" />
+    <label>Telefone com DDD:
+      <input type="tel" name="telefone" required placeholder="Ex: (84) 91234-5678" />
+    </label>
 
-      <label for="telefone">Telefone com DDD:</label>
-      <input type="tel" id="telefone" name="Telefone" required placeholder="(xx) xxxxx-xxxx" />
+    <label>Email:
+      <input type="email" name="email" required />
+    </label>
 
-      <label for="email">E-mail:</label>
-      <input type="email" id="email" name="Email" required placeholder="Seu melhor e-mail" />
+    <label>Ponto de referência:
+      <input type="text" name="referencia" />
+    </label>
 
-      <label for="referencia">Ponto de referência:</label>
-      <input type="text" id="referencia" name="Referência" placeholder="Próximo a..." />
+    <h3>Indique um amigo e ganhe 50% de desconto</h3>
 
-      <h2>Indique um amigo e ganhe 50% de desconto!</h2>
+    <label>Nome da pessoa indicada:
+      <input type="text" name="indicacao_nome" />
+    </label>
 
-      <label for="indicado-nome">Nome do amigo indicado:</label>
-      <input type="text" id="indicado-nome" name="Nome do indicado" placeholder="Nome completo do amigo" />
+    <label>CPF da pessoa indicada:
+      <input type="text" name="indicacao_cpf" />
+    </label>
 
-      <label for="indicado-cpf">CPF do amigo indicado:</label>
-      <input type="text" id="indicado-cpf" name="CPF do indicado" placeholder="000.000.000-00" />
+    <label>Telefone com DDD da pessoa indicada:
+      <input type="tel" name="indicacao_telefone" placeholder="Ex: (84) 91234-5678" />
+    </label>
 
-      <label for="indicado-telefone">Telefone do amigo (com DDD):</label>
-      <input type="tel" id="indicado-telefone" name="Telefone do indicado" placeholder="(xx) xxxxx-xxxx" />
+    <input type="hidden" name="_next" value="https://formulario-proxxima.vercel.app/obrigado.html" />
+    <input type="hidden" name="_captcha" value="false" />
 
-      <button type="submit">Enviar cadastro</button>
-    </form>
-  </div>
+    <button type="submit">Enviar</button>
+  </form>
 </body>
 </html>
+
 
 
