--- a/obrigado.html
+++ b/obrigado.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Obrigado!</title>
-  <style>
-    body {
-      text-align: center;
-      font-family: Arial, sans-serif;
-      padding: 50px;
-      background: #f0f8ff;
-    }
-    h1 {
-      color: #0073e6;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Cadastro enviado com sucesso!</h1>
-  <p>Em breve entrarei em contato com você. Obrigado!</p>
+  <header class="identidade">
+    <h1>Proxxima Telecom</h1>
+    <h2>Gilson Tavares</h2>
+    <p>Consultor e Vendedor Externo</p>
+  </header>
+
+  <main class="mensagem-obrigado">
+    <h2>🙏 Obrigado pelo envio!</h2>
+    <p>Seus dados foram recebidos com sucesso. Em breve, entrarei em contato para darmos continuidade ao atendimento.</p>
+    <p>Fique atento ao seu WhatsApp e e-mail! 📲📧</p>
+  </main>
 </body>
 </html>
+
 
 
