--- a/obrigado.html
+++ b/obrigado.html
@@ -2,24 +2,71 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Obrigado!</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mensagem Recebida</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to bottom right, #f0f4f8, #d9e8f5);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      margin: 0;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    .mensagem-obrigado {
+      background-color: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      max-width: 500px;
+      width: 100%;
+    }
+
+    h2 {
+      font-size: 1.8rem;
+      color: #005ea2;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1.1rem;
+      color: #333;
+      margin-bottom: 1rem;
+    }
+
+    a.btn-voltar {
+      display: inline-block;
+      margin-top: 1.5rem;
+      background-color: #005ea2;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+    }
+
+    a.btn-voltar:hover {
+      background-color: #00467a;
+    }
+  </style>
 </head>
 <body>
-  <header class="identidade">
-    <h1>Proxxima Telecom</h1>
-    <h2>Gilson Tavares</h2>
-    <p>Consultor e Vendedor Externo</p>
-  </header>
-
   <main class="mensagem-obrigado">
     <h2>🙏 Obrigado pelo envio!</h2>
     <p>Seus dados foram recebidos com sucesso. Em breve, entrarei em contato para darmos continuidade ao atendimento.</p>
     <p>Fique atento ao seu WhatsApp e e-mail! 📲📧</p>
+    <a class="btn-voltar" href="index.html">Voltar à página inicial</a>
   </main>
 </body>
 </html>
+
 
 
 
