--- a/index.html
+++ b/index.html
@@ -1,70 +1,109 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Formulário Proxxima</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <header class="identidade">
-    <h1>Proxxima Telecom</h1>
-    <h2>Gilson Tavares</h2>
-    <p>Consultor e Vendedor Externo</p>
-    <p class="contrate">📞 Contrate comigo!</p>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cadastro Proxxima</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header class="identidade">
+      <h1>Proxxima Telecom</h1>
+      <h2>Gilson Tavares</h2>
+      <p>Consultor e Vendedor Externo</p>
+      <p class="contrate">📞 Contrate comigo!</p>
+    </header>
 
-  <form action="https://formsubmit.co/gilson.tavares1510@gmail.com" method="POST">
-    <label>Nome completo:
-      <input type="text" name="nome" required placeholder="Digite seu nome completo" />
-    </label>
+    <section class="frase-conexao">
+      <p>A próxima conexão é com você. Complete o formulário e vamos ativar a melhor Internet para seu endereço.</p>
+    </section>
 
-    <label>CPF (para consulta de crédito):
-      <input type="text" name="cpf" required placeholder="Digite seu CPF" />
-    </label>
+    <main>
+      <form
+        action="https://formsubmit.co/gilson.tavares1510@gmail.com"
+        method="POST"
+      >
+        <!-- Redirecionamento após envio -->
+        <input
+          type="hidden"
+          name="_next"
+          value="https://formulario-proxxima.vercel.app/obrigado.html"
+        />
 
-    <label>CEP:
-      <input type="text" name="cep" required placeholder="Ex: 59584-000" />
-    </label>
+        <!-- Estado -->
+        <label for="estado">Estado *</label>
+        <select name="Estado" id="estado" required>
+          <option value="">Selecione seu estado</option>
+          <option value="Bahia">Bahia</option>
+          <option value="Paraíba">Paraíba</option>
+          <option value="Pernambuco">Pernambuco</option>
+          <option value="Rio Grande do Norte">Rio Grande do Norte</option>
+        </select>
+        <form id="formulario">
 
-    <label>Endereço completo:
-      <input type="text" name="endereco" required placeholder="Rua, número, bairro e cidade" />
-    </label>
+        <!-- Dados Pessoais -->
+        <label for="nome">Nome completo *</label>
+        <input type="text" id="nome" name="Nome" placeholder="Digite seu nome completo" required />
 
-    <label>Telefone com DDD:
-      <input type="tel" name="telefone" required placeholder="Ex: (84) 91234-5678" />
-    </label>
+        <label for="cpf">CPF (para consulta) *</label>
+        <input type="text" id="cpf" name="CPF" placeholder="Digite seu CPF" required />
 
-    <label>Email:
-      <input type="email" name="email" required placeholder="seuemail@exemplo.com" />
-    </label>
+        <label for="whatsapp">WhatsApp com DDD *</label>
+        <input type="tel" id="whatsapp" name="WhatsApp" placeholder="Digite seu WhatsApp com DDD" required />
 
-    <label>Ponto de referência:
-      <input type="text" name="referencia" placeholder="Próximo à escola, igreja, etc." />
-    </label>
+        <label for="email">E-mail</label>
+        <input type="email" id="email" name="Email" placeholder="Digite seu e-mail" />
 
-    <h3>Indique um amigo e ganhe 50% de desconto</h3>
+        <!-- Endereço -->
+        <label for="rua">Rua *</label>
+        <input type="text" id="rua" name="Rua" placeholder="Digite a rua" required />
 
-    <label>Nome da pessoa indicada:
-      <input type="text" name="indicacao_nome" placeholder="Nome completo do amigo" />
-    </label>
+        <label for="numero">Número *</label>
+        <input type="text" id="numero" name="Número" placeholder="Digite o número" required />
 
-    <label>CPF da pessoa indicada:
-      <input type="text" name="indicacao_cpf" placeholder="CPF do amigo indicado" />
-    </label>
+        <label for="bairro">Bairro *</label>
+        <input type="text" id="bairro" name="Bairro" placeholder="Digite o bairro" required />
 
-    <label>Telefone com DDD da pessoa indicada:
-      <input type="tel" name="indicacao_telefone" placeholder="Ex: (84) 98765-4321" />
-    </label>
+        <label for="cidade">Cidade *</label>
+        <input type="text" id="cidade" name="Cidade" placeholder="Digite a cidade" required />
 
-    <input type="hidden" name="_next" value="https://formulario-proxxima.vercel.app/obrigado.html" />
-    <input type="hidden" name="_captcha" value="false" />
+        <label for="referencia">Ponto de referência</label>
+        <input type="text" id="referencia" name="Referência" placeholder="Digite um ponto de referência" />
 
-    <button type="submit">Enviar</button>
-  </form>
-</body>
+        <!-- Indicação -->
+        <h3>Indique um amigo e ganhe 50% de desconto em 1 mês</h3>
+
+        <label for="nome-indicado">Nome completo do indicado</label>
+        <input
+          type="text"
+          id="nome-indicado"
+          name="Nome do indicado"
+          placeholder="Nome completo da pessoa indicada"
+        />
+
+        <label for="cpf-indicado">CPF do indicado</label>
+        <input
+          type="text"
+          id="cpf-indicado"
+          name="CPF do indicado"
+          placeholder="CPF da pessoa indicada"
+        />
+
+        <label for="telefone-indicado">Telefone com DDD do indicado</label>
+        <input
+          type="tel"
+          id="telefone-indicado"
+          name="Telefone do indicado"
+          placeholder="WhatsApp da pessoa indicada"
+        />
+
+        <button type="submit">Enviar</button>
+      </form>
+    </main>
+
+    <footer>
+      <p>&copy; 2025 Proxxima Telecom - Gilson Tavares</p>
+    </footer>
+  </body>
 </html>
-
-
-
-
