--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
@@ -40,7 +39,6 @@
           <option value="Pernambuco">Pernambuco</option>
           <option value="Rio Grande do Norte">Rio Grande do Norte</option>
         </select>
-        <form id="formulario">
 
         <!-- Dados Pessoais -->
         <label for="nome">Nome completo *</label>
@@ -48,6 +46,9 @@
 
         <label for="cpf">CPF (para consulta) *</label>
         <input type="text" id="cpf" name="CPF" placeholder="Digite seu CPF" required />
+
+        <label for="nascimento">Data de nascimento *</label>
+        <input type="date" id="nascimento" name="Data de Nascimento" required />
 
         <label for="whatsapp">WhatsApp com DDD *</label>
         <input type="tel" id="whatsapp" name="WhatsApp" placeholder="Digite seu WhatsApp com DDD" required />
@@ -69,7 +70,7 @@
         <input type="text" id="cidade" name="Cidade" placeholder="Digite a cidade" required />
 
         <label for="cep">CEP:</label>
-        <input type="text" id="cep" name="cep" pattern="\d{5}-?\d{3}" placeholder="Ex: 59000-000" required>
+        <input type="text" id="cep" name="cep" pattern="\d{5}-?\d{3}" placeholder="Ex: 59000-000" required />
 
         <label for="referencia">Ponto de referência</label>
         <input type="text" id="referencia" name="Referência" placeholder="Digite um ponto de referência" />
@@ -105,30 +106,15 @@
 
         <div class="compartilhar">
           <h3>📢 Compartilhe com amigos!</h3>
-
           <a href="https://wa.me/?text=https://formulario-proxxima.vercel.app" target="_blank">
             Compartilhar via WhatsApp
           </a>
         </div>
-        
-
       </form>
-
-      
-      <script>
-        function copiarLink() {
-          const link = "https://formulario-proxxima.vercel.app";
-          navigator.clipboard.writeText(link).then(() => {
-            alert("Link copiado para a área de transferência!");
-          });
-        }
-      </script>
-
     </main>
 
     <footer>
       <p>&copy; 2025 Proxxima Telecom - Gilson Tavares</p>
     </footer>
-
   </body>
 </html>
