Versão 3.4.2 - Corrige campos 'turno' e 'vencimento' no EmailJS

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         event.preventDefault();
         const form = event.target;
 
-        emailjs.sendForm("service_fau06ha", "template_c963omc", form)
+    emailjs.sendForm("service_fau06ha", "template_proxxima_2025", form)
           .then(() => {
             window.location.href = "https://formulario-proxxima.vercel.app/obrigado.html";
           }, (error) => {
