--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
 
         <h3>📣 Já é cliente? Indique um amigo e ganhe 50% de desconto!</h3>
 
+        <label for="nomeCliente">Seu nome completo *</label>
+        <input type="text" id="nomeCliente" name="nomeCliente" required placeholder="Seu nome completo" />
+
+        <label for="cpfCliente">Seu CPF *</label>
+        <input type="text" id="cpfCliente" name="cpfCliente" required placeholder="Seu CPF" />
+
         <label for="nomeIndicado">Nome completo do indicado</label>
         <input type="text" id="nomeIndicado" name="nomeIndicado" placeholder="Nome completo da pessoa indicada" />
 
